<resources>
    <string name="app_name">Visu</string>

    <string name="name">Họ và tên</string>
    <string name="phone">Điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="cancel">HỦY</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="register_info">Đăng ký thông tin</string>
    <string name="login_info">Đăng nhập</string>
    <string name="visu">VISU</string>
    <string name="slogan">Đưa con em chúng ta vươn tầm cao mới</string>
    <string name="have_account">Đã có tài khoản</string>
    <string name="dont_have_account">Chưa có tài khoản</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="login_google">ĐĂNG NHẬP VỚI GOOGLE</string>
    <string name="login_facebook">ĐĂNG NHẬP VỚI FACEBOOK</string>
    <string name="next">Tiếp tục</string>
    <string name="info_account">Thông tin tài khoản</string>
    <string name="text_back_exit">Click BACK lần nữa để thoát</string>
    <string name="info_class">Thông tin lớp học</string>
    <string name="address_class">Địa chỉ lớp học</string>
    <string name="sum_student">Số lượng  học sinh</string>
    <string name="time">Thời gian học</string>
    <string name="time_case">THỜI GIAN HỌC</string>
    <string name="_2">Thứ 2</string>
    <string name="_3">Thứ 3</string>
    <string name="_4">Thứ 4</string>
    <string name="_5">Thứ 5</string>
    <string name="_6">Thứ 6</string>
    <string name="_7">Thứ 7</string>
    <string name="_8">Chủ nhật</string>
    <string name="date_start">Ngày bắt đầu</string>
    <string name="sum_week">Số tuần</string>
    <string name="sum_price">THÀNH TIỀN</string>
    <string name="select_tutor">ĐẶT GIA SƯ</string>
    <string name="select_tutor_case">Chọn gia sư phù hợp</string>
    <string name="experience">Kinh nghiệm</string>
    <string name="gender">Giới tính</string>
    <string name="pending">Đang chờ xác nhận từ gia sư...</string>
</resources>
