<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/bg_dialog">

            <danazone.com.visu.CircleImageView
                android:id="@+id/mImgAvatar"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/banner" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mTvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mImgAvatar"
                android:gravity="center"
                android:textColor="@color/white" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_70sdp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_shadow_textview"
                    android:hint="Trần Đình Trọng" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvSchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_shadow_textview"
                    android:text="Đại học bách khoa Đà Nẵng" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_shadow_textview"
                    android:text="1/1/1999" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_shadow_textview"
                    android:text="112 Núi Thành, Hải Châu, Đà Nẵng" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_shadow_textview"
                    android:text="Sinh viên" />

                <TextView
                    android:id="@+id/mEdtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_shadow_textview"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorMain"
                    android:textSize="@dimen/_10sdp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvPhoneSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:text="Xác nhận số điện thoại"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:text="@string/select_tutor"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_95sdp"
        android:background="@drawable/bg_shadow_textview"
        android:orientation="vertical">

        <RatingBar
            android:id="@+id/mRatingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4.5"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5 năm"
                    android:textColor="@color/orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mTvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nam"
                    android:textColor="@color/orange" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
